added css to booking

--- a/client/app/club/club.html
+++ b/client/app/club/club.html
@@ -134,7 +134,7 @@
 
 				 	<div class="col-md-2" id="clubs_list">
 						<div id="clubs_list_wrap" class="box_shadow_dwn">
-							<div id="list_heading" ><span class="glyphicon glyphicon-tasks" style="padding:3px 3px 3px 0px" ></span>Events</div>						
+							<div class="list_heading" ><span class="glyphicon glyphicon-tasks" style="padding:3px 3px 3px 0px" ></span>Events</div>						
 								
 							<span ng-repeat="eventsList in eventsList">
 								<a data-toggle="tab" href="/event/{{eventsList._id}}">
