--- a/client/app/uploadPortal/uploadPortal.html
+++ b/client/app/uploadPortal/uploadPortal.html
@@ -184,7 +184,7 @@
 
 								
 
-
+-->
 								<div class="img_div thumbs_wrap col-md-12"  data-toggle="modal" data-target="#img_view" onclick="document.getElementById('for_blur').style.filter = 'blur(10px)'">
 									<div class="col-md-6 text_type_post" id="event_det">
 										<a href="#"><span id="event_post_heading">Media Club</span></a><br> We is organising a <a href="#">Photowalk</a> at <a href="#">6:00 am</a>on <a href="#">Sunday 2nd August 2015</a>,<a href="#">Elite Beach</a>
@@ -208,7 +208,7 @@
 													<span id="user_art_info">
 														<div id="a">
 														<span id="vid_data">{{video.video.vidname}}</span>
-													<!--	<div id="vid_data">{{video.video.description}}</div>--
+													<!--	<div id="vid_data">{{video.video.description}}</div>-->
 														<span style="bottom:20px;left:10px;position:absolute">Views : {{video.video.view_count}}</span>
 														</div>
 													</span>		
@@ -216,8 +216,9 @@
 								<!--	<div class="col-md-6 thumbs_wrap thumbs_in" id="post_view">
 									dfgfhm,<br>
 									sdfdgf<br>dssfv
-									</div>--
+									</div>-->
 								</div>
+								<!--
 
 
 								<div class="col-md-12">
