--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -30,20 +30,30 @@
 		<!-- <ul class="nav nav-tabs" style="margin:30px 30% 10px;text-align:center">
 		  <li class="active" style="width:50%;"><a data-toggle="tab" href="#booked_display">Home</a></li>
 		  <li style="width:50%"><a data-toggle="tab" href="#stage">All</a></li>
-		</ul> --> 
+		</ul> -->
+		
 
-		<div class="col-md-9" id="vedikites_title" >
-			<a data-toggle="tab" href="#booked_display">
-				<img src="/assets/images/todaysVedik.png" class="active">
-			</a>
-		</div>
-		<div class="col-md-3" id="latest_tab"><a data-toggle="tab" href="#stage">IITM Latest</a></div>
+
+
+
+
 
 		
 		
 
-		<div class="tab-content ">
+		<div class="tab-content col-md-12">
 			<div id="booked_display" class="tab-pane fade in active" style="min-height:100%;padding:20px 0px">
+				<div class="col-md-12"> 
+					<div class="col-md-9"  >
+						<a data-toggle="tab" href="#booked_display">
+							<div  id="vedikites_title" >			
+								<img src="/assets/images/todaysVedik.png" class="active">
+								<hr/>
+							</div>
+						</a>
+					</div>
+					<div  class="col-md-3" ng-click="todaysVedik=false"><a data-toggle="tab" href="#stage"><div  id="latest_tab">IITM Latest</div></a></div>
+				</div>
 				<div>
 					<div class="col-md-1"></div>					
 					<div ng-controller="UploadPortalCtrl"  ng-class="for_blur" class="col-md-4" style="padding:0px 20px 30px 0px;border-right:2px solid grey">
@@ -59,8 +69,11 @@
 						</content-item>
 					</div>	
 					<div class="col-md-3" style="padding:0px 20px;" >
-						<div  style="height:300px;margin:20px 0px;box-shadow: 1px 1px 2px grey;background-color:white">
-							<p class="list_heading"><img src="http://www.clker.com/cliparts/R/d/z/v/H/1/neon-green-dot-md.png" width="10px" height="auto"> Live Events</p>
+						<div  style="height:300px;margin:20px 0px;box-shadow: 1px 1px 2px grey;background-color:rgba(255,255,255,1)">
+							<p class="list_heading"><img src="http://www.clker.com/cliparts/R/d/z/v/H/1/neon-green-dot-md.png" width="10px" height="auto"> Today's Events</p>
+							<a href="/club/{{clubsList._id}}" ng-repeat="clubsList in clubsList">
+								<button type="button" class="btn btn-info btn-lg w2b col-md-12" style="font-size:12px;margin:0px 0px;padding:4px 10px;text-align:left">{{clubsList.name}}</button>
+							</a>
 							<p class="list_heading"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Location_dot_grey.svg/2000px-Location_dot_grey.svg.png" width="10px" height="auto"> Upcoming Events</p>
 						</div>
 					</div>
@@ -69,11 +82,22 @@
 		
 	<!--This div for displaying the stage-holders that day( the videos booked for that day)  -->
 			<div id="stage" class="tab-pane fade">
+				<div class="col-md-12"> 
+					<div class="col-md-9"  ng-click="todaysVedik=true">
+						<a data-toggle="tab" href="#stage">
+							<div  id="vedikites_title" >			
+								<img src="http://txt-dynamic.static.1001fonts.net/txt/dHRmLjcyLmZmZmZmZi5UbVYzSUc5dUlGWmxaR2xyLjA,/a-gentle-touch.medium.png" class="active">
+								<hr/>
+							</div>
+						</a>
+					</div>
+					<div  class="col-md-3" ng-click="todaysVedik=false"><a data-toggle="tab" href="#booked_display"><div  id="latest_tab">Today's Vedik</div></a></div>
+				</div>
 				<div class="col-md-2" id="clubs_list">
 					<div id="clubs_list_wrap" class="box_shadow_dwn">
 						<p class="list_heading">Clubs</p>
 						<a href="/club/{{clubsList._id}}" ng-repeat="clubsList in clubsList">
-						<button type="button" class="btn btn-info btn-lg w2b col-md-12" style="font-size:12px;margin:0px 0px;padding:4px 10px;text-align:left">{{clubsList.name}}</button>
+							<button type="button" class="btn btn-info btn-lg w2b col-md-12" style="font-size:12px;margin:0px 0px;padding:4px 10px;text-align:left">{{clubsList.name}}</button>
 						</a>
 					</div>
 				</div>
@@ -104,6 +128,10 @@
 					</li>
 				</ul>
 			</div>-->
+		</div>
+		<div class="col-md-12" style="background:grey;height:200px">
+				About<br/>
+				Team
 		</div>
 		</div>
 
