--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,6 +1,5 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-<div id="hidden"></div>
-<div style="position:absolute;top:-5px;z-index:0"><img src="assets/images/loginpage3.jpg" width="100%" height="100%"></div>
+
+<div ><img src="assets/images/loginpage3.jpg" width="100%" height="100%"></div>
 
 <div class="container glassy" id="login">
   <div class="row ">
