--- a/client/app/club/club.html
+++ b/client/app/club/club.html
@@ -5,7 +5,7 @@
 <!--******************************************************************-->
 
 
-<div ng-controller="ClubCtrl" id="for_blur">
+<div ng-controller="ClubCtrl" id="for_blur">	
 	<div ng-include="'components/navbar/navbar.html'"></div>
 	<div id="nav_fade">
 	  <img src="http://www.rottweilerheartsrescue.org/Images/fade2black.png" width="100%" height="200px">
@@ -138,7 +138,10 @@
 								
 							<span ng-repeat="eventsList in eventsList">
 								<a data-toggle="tab" href="/event/{{eventsList._id}}">
-									<button type="button" class="btn btn-info btn-lg w2b col-md-12" style="font-size:12px;margin:0px 0px;padding:4px 10px;text-align:left">{{eventsList.name}}</button>
+									<button type="button" class="btn btn-info btn-lg w2b col-md-12" style="font-size:12px;margin:0px 0px;padding:4px 10px;text-align:left" ng-show="!eventsList.comp || !eventsList.subOnl">{{eventsList.name}}</button>								
+								</a>
+								<a data-toggle="tab" href="/competition/{{eventsList._id}}">
+									<button type="button" class="btn btn-info btn-lg w2b col-md-12" style="font-size:12px;margin:0px 0px;padding:4px 10px;text-align:left" ng-show="eventsList.comp && eventsList.subOnl">{{eventsList.name}}</button>
 								</a>
 							</span>
 							
