update angular material

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -3,8 +3,8 @@
 <!-- <div ><img src="assets/images/loginpage3.jpg" width="100%" height="100%"></div> -->
 <div id="login">
   <div class="thumbs_wrap bgw">
-    <div class="col-md-12 colorbl" id="logo">
-      <h1>Vedik</h1>
+    <div class="col-md-12 colorbl" id="logob">
+      <span >Vedik</span>
     </div>
     <div class="container  glassy col-md-5 colorb" id="login_wrapper" >
       <div class="row">
