--- a/client/app/competition/competition.html
+++ b/client/app/competition/competition.html
@@ -37,9 +37,9 @@
         <p data-toggle="modal" data-target="#broadcast" onclick="document.getElementById('for_blur').style.filter = 'blur(10px)'">Broadcast</p>
         <p>FAQ</p>
         <div class="col-md-12">
-            <md-button class=" md-primary lh15" ng-click="addAttend()"  ng-hide="attending" style="margin:0px 0px 5px;border-radius:0px">Register Now <span class="glyphicon glyphicon-plus"> </span><br/><span style="font-size:9px">Submit Entry Later</span> </md-button><br/>
-            <md-button class=" md-primary" ng-click="addAttend()"  ng-hide="attending" style="margin:0px 0px 5px;border-radius:0px">Register and Submit Now <span class="glyphicon glyphicon-plus"> </span></md-button>
-            <md-button  ng-click="unAttend()"  ng-show="attending" style="margin:0px 0px 5px"><span ng-show="!event.regReq">You are going</span><span ng-show="event.regReq">Registed</span></md-button>
+            <md-button class=" md-primary lh15" ng-click="attend()"   style="margin:0px 0px 5px;border-radius:0px"><span ng-show="!attending">Register Now> <span class="glyphicon glyphicon-plus"></span></span> <span ng-show="attending">Registered</span> </span><br/><span style="font-size:9px">Submit Entry Later</span> </md-button><br/>
+            <md-button class=" md-primary"   style="margin:0px 0px 5px;border-radius:0px" data-toggle="modal" data-target="#submitEntry"><span ng-click="addAttend()" ng-show="!attending"> Register and Submit Now </span><span ng-show="attending" > Submit </span><span class="glyphicon glyphicon-plus"> </span></md-button>
+            <!-- <md-button  ng-click="unAttend()"  ng-show="attending" style="margin:0px 0px 5px"><span ng-show="!event.regReq">You are going</span><span ng-show="event.regReq">Registed</span></md-button> -->
             <br><div style="font-size:10px;text-align:center">{{attendingNum}} Entries</div>
             <div class="sizeten colorg" ng-show="event.regReq">*Registration Required</div>
         </div>
@@ -52,7 +52,9 @@
     <nav class="navbar navbar-default" id="navbar_mdl">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Updates</a>
+        	<ul class="nav nav-tabs">
+    			<a class="navbar-brand" href="#">Updates</a>
+			</ul>
         </div>
       </div>
     </nav>
@@ -267,13 +269,15 @@
 
         </div>
         <br/><br/>
-        <div class="col-md-12 box_shadow_dwn ">
+        <div class="col-md-12 box_shadow_dwn " style="padding:10px">
             <md-subheader class="md-no-sticky">People Attending</md-subheader>
-              <md-list-item ng-repeat="person in event.attending" >
-                <img alt="{{ person.user.name }}" ng-src="{{ person.user.proPic }}" class="md-avatar" />
-                <p>{{ person.user.name }}</p>
+        	<div class="col-md-4" ng-repeat="entry in event.entries"  style="padding:10px">
+             	<span>{{entry.user.name}}</span>
+                <img alt="{{entry.entry.entry }}" ng-src="{{entry.entry.entry }}" width="100%" height="auto" />                
+                <rating ng-model="entry.entry.rating" max="max" readonly="isReadonly" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" ng-click="ratePost(entry.entry.rating,entry.entry._id)">
                 <md-icon md-svg-icon="communication:messenger" ng-click="doSecondaryAction($event)" aria-label="Open Chat" class="md-secondary md-hue-3" ng-class="{'md-primary': person.newMessage}"></md-icon>
-              </md-list-item>
+              
+          </div>
         </div>
 
     </div>
