--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -189,7 +189,7 @@
 			        		<ul>
 			        			<a href="#about_user" data-toggle="tab"><li><span class="glyphicon glyphicon-user"></span> About</li></a>
 			        			<a href="#HOF" data-toggle="tab"><li><span class="glyphicon glyphicon-education"></span> Hall of Fame</li></a>
-			        			<a href="#HOF" data-toggle="modal" data-target="#gal_pic_modal" onclick="document.getElementById('for_blur').style.filter = 'blur(5px)'" ng-show="user.name==loggedInUser.name"><li><span class="glyphicon glyphicon-education"></span> Edit Profile</li></a>
+			        			<a href="#HOF" data-toggle="modal" data-target="#editUser" onclick="document.getElementById('for_blur').style.filter = 'blur(5px)'" ng-show="user.name==loggedInUser.name"><li><span class="glyphicon glyphicon-education"></span> Edit Profile</li></a>
 			        			<a href="#HOF" data-toggle="tab"><li><span class="glyphicon glyphicon-education"></span> Settings</li></a>
 			        			
 			        			<a href="#upload_form" data-toggle="tab">
