--- a/client/app/competition/competition.html
+++ b/client/app/competition/competition.html
@@ -37,8 +37,8 @@
         <p data-toggle="modal" data-target="#broadcast" onclick="document.getElementById('for_blur').style.filter = 'blur(10px)'">Broadcast</p>
         <p>FAQ</p>
         <div class="col-md-12">
-            <md-button class=" md-primary lh15" ng-click="attend()"   style="margin:0px 0px 5px;border-radius:0px"><span ng-show="!attending">Register Now> <span class="glyphicon glyphicon-plus"></span></span> <span ng-show="attending">Registered</span> </span><br/><span style="font-size:9px">Submit Entry Later</span> </md-button><br/>
-            <md-button class=" md-primary"   style="margin:0px 0px 5px;border-radius:0px" data-toggle="modal" data-target="#submitEntry"><span ng-click="addAttend()" ng-show="!attending"> Register and Submit Now </span><span ng-show="attending" > Submit </span><span class="glyphicon glyphicon-plus"> </span></md-button>
+            <md-button class=" md-primary lh15" ng-click="attend()"   style="margin:0px 0px 5px;border-radius:0px" ng-hide="submitted"><span ng-show="!attending">Register Now> <span class="glyphicon glyphicon-plus"></span></span> <span ng-show="attending">Registered</span> <br/><span style="font-size:9px" ng-show="!attending">Submit Entry Later</span><span style="font-size:9px" ng-show="attending">Click to Withdraw</span> </md-button><br/>
+            <md-button class=" md-primary"   style="margin:0px 0px 5px;border-radius:0px" data-toggle="modal" data-target="#submitEntry"><span ng-click="addAttend()" ng-show="!attending"> Register and Submit Now </span><span ng-show="attending" > Submit Now </span><span class="glyphicon glyphicon-plus"> </span></md-button>
             <!-- <md-button  ng-click="unAttend()"  ng-show="attending" style="margin:0px 0px 5px"><span ng-show="!event.regReq">You are going</span><span ng-show="event.regReq">Registed</span></md-button> -->
             <br><div style="font-size:10px;text-align:center">{{attendingNum}} Entries</div>
             <div class="sizeten colorg" ng-show="event.regReq">*Registration Required</div>
@@ -270,7 +270,7 @@
         </div>
         <br/><br/>
         <div class="col-md-12 box_shadow_dwn " style="padding:10px">
-            <md-subheader class="md-no-sticky">People Attending</md-subheader>
+            <md-subheader class="md-no-sticky">Entries</md-subheader>
         	<div class="col-md-4" ng-repeat="entry in event.entries"  style="padding:10px">
              	<span>{{entry.user.name}}</span>
                 <img alt="{{entry.entry.entry }}" ng-src="{{entry.entry.entry }}" width="100%" height="auto" />                
