winning posts and notifs done

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -38,7 +38,7 @@
 		<div class="col-md-12" id="tagline_box">
 			<p>Because Everyone needs<br>a Stage</p>
 		</div>
-		<div class="col-md-12"> 
+		<div class="col-md-12 bglg"> 
 			
 			<div class="col-md-9"  >
 				
@@ -64,7 +64,7 @@
 		
 		
 
-		<div class="tab-content col-md-12">
+		<div class="tab-content col-md-12 bglg">
 			<div id="booked_display" class="tab-pane fade in active" style="min-height:100%;padding:20px 0px">
 				
 				<div>
