--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
       <!-- endbower -->
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
 
 
     <!-- endbuild -->
