--- a/client/index.html
+++ b/client/index.html
@@ -131,6 +131,8 @@
     <![endif]-->
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
+      
+      <script src="bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
       <script src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular/angular.js"></script>
       <script src="bower_components/angular-resource/angular-resource.js"></script>
