--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
       <link rel="stylesheet" href="app/stage/stage.css">
       <link rel="stylesheet" href="app/uploadPortal/uploadPortal.css">
       <link rel="stylesheet" href="app/viewPage/viewPage.css">
+      <link rel="stylesheet" href="app/welcomeUser/welcomeUser.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <link rel="stylesheet" href="components/navbar/navbar.css">
       <!-- endinjector -->
@@ -190,6 +191,8 @@
           <script src="app/viewPage/viewPage.controller.js"></script>
           <script src="app/viewPage/viewPage.js"></script>
           <script src="app/viewPage/viewPageService.service.js"></script>
+          <script src="app/welcomeUser/welcomeUser.controller.js"></script>
+          <script src="app/welcomeUser/welcomeUser.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/effects/angular-perfect-parallax.js"></script>
