--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
       <!-- endbower -->
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
+      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Abel">
 
 
     <!-- endbuild -->
