--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
       <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Abel">
+      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat">
 
 
     <!-- endbuild -->
@@ -41,6 +42,7 @@
       <link rel="stylesheet" href="app/uploadPortal/uploadPortal.css">
       <link rel="stylesheet" href="app/viewPage/viewPage.css">
       <link rel="stylesheet" href="app/welcomeUser/welcomeUser.css">
+      <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <link rel="stylesheet" href="components/navbar/navbar.css">
       <!-- endinjector -->
@@ -197,6 +199,7 @@
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/effects/angular-perfect-parallax.js"></script>
+          <script src="components/footer/footer.controller.js"></script>
           <script src="components/modal/modal.controller.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
