--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -38,7 +38,7 @@
 
 
 		<div class="col-md-12 valignOut" id="tagline_box">
-			<p class="colorlb">Because Everyone needs a Stage</p>
+			<p >Because Everyone needs a Stage</p>
 		</div>
 		
 		
@@ -47,14 +47,14 @@
 
 		
 
-		<div class="tab-content col-md-12 bglg" style="padding:0px 0px 0px 50px !important">
+		<div class="tab-content col-md-12 bglg" style="padding:0px 50px !important">
 			<div class="col-md-12 bglg"> 
 			
 				<div class="col-md-12"  >
 					
 						<div  id="vedikites_title" >
 
-							<span class="floatL" style="font-size:20px" ng-click="x()">IIT Madras' Vedik</span>
+							<span class="floatL" style="font-size:20px;font-family: Abel,Arial;letter-spacing: 0px;" >IIT Madras' Vedik</span>
 							<ul class="nav nav-tabs floatL">
 							    <li class="btnbg rlmargin"><a data-toggle="tab" href="#booked_display"><span class="glyphicon glyphicon-play-circle"></span> On Stage</a></li>
 							    <li class="btnbg rlmargin"><a data-toggle="tab" href="#stage"><span class="glyphicon glyphicon-th" ></span> Latest</a></li>
@@ -73,7 +73,7 @@
 				<div>
 										
 					<div ng-controller="UploadPortalCtrl"  ng-class="for_blur" class="col-md-4" style="padding:0px 20px 30px 0px;">
-						<div class="col-md-12 bgw" style="font-family: arial;letter-spacing: 0px;padding:20px;margin:0px 0px 20px 0px">
+						<div class="col-md-12 " style="font-family: arial;letter-spacing: 0px;margin:0px 0px 20px 0px">
 
 							<div  class="thumbs_wrap box_shadow_dwn">
 								<div class="list_heading col-md-12"><span class="glyphicon glyphicon-th-list"> Today's Events</span></div>
