respect is set, post dimensions also set

--- a/client/app/club/club.html
+++ b/client/app/club/club.html
@@ -97,7 +97,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 " style="padding:20px">
-						<div class="thumbs_wrap col-md-12"  style="border:2px solid grey;padding:10px;">
+						<div class="thumbs_wrap col-md-12"  style="border:2px solid grey;padding:10px;" ng-show="isAdmin">
 				            <h4 class="colorb">Annouce<hr></h4>
 				            <div >
 				              <ul class="nav nav-tabs" >
@@ -165,8 +165,8 @@
 		            			<li ><a data-toggle="tab" href="#about_user">About</a></li>
 		            			<li class="active"><a data-toggle="tab" href="#events"><span class=" 	glyphicon glyphicon-calendar"></span> Events</a></li> 
 		            			<li ><a data-toggle="tab" href="#HOF"> Hall of Fame</a></li>  
-		            			<li ><a href="" data-toggle="modal" data-target="#editClub" ><span class="glyphicon glyphicon-edit"></span> Edit Profile</a></li> 
-		            			<li ><a data-toggle="modal" data-target="#clubSettings" href=""><span class="glyphicon glyphicon-cog"></span> Settings</a></li> 
+		            			<li ng-show="isAdmin"><a href="" data-toggle="modal" data-target="#editClub" ><span class="glyphicon glyphicon-edit"></span> Edit Profile</a></li> 
+		            			<li ng-show="isAdmin"><a data-toggle="modal" data-target="#clubSettings" href=""><span class="glyphicon glyphicon-cog"></span> Settings</a></li> 
 							</ul>
 							<div  class="tab-content colorw">
 				        		
@@ -195,7 +195,7 @@
 				        			<div class="col-md-12" id="clubs_list">
 										<div class="thumbs_wrap box_shadow_dwn">
 											<div class="list_heading" ><span class=" 	glyphicon glyphicon-calendar"></span> Events</div>				
-											<a href="/{{redirect[$index]}}/{{tEvent._id}}" ng-repeat="event in eventsList" ng-init="redirect(event.subOnl,$index)">
+											<a href="/{{redirect[$index]}}/{{event._id}}" ng-repeat="event in eventsList" ng-init="redirect(event.subOnl,$index)">
 												<button type="button" class="btn btn-info btn-lg w2g col-md-12 lh20 alignL" style="font-size:15px"><span class="glyphicon glyphicon-calendar"></span> {{event.name}}
 												<br/>
 													<div class="sizeten colorg row">
