--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -4,7 +4,7 @@
 <!--******************************************************************-->
 
 
-<div ng-controller="ProfileCtrl" id="for_blur">
+<div ng-controller="ProfileCtrl" id="for_blur" ng-show="test">
 	<div ng-include="'components/navbar/navbar.html'"></div>
 			<div class="valignOut " id="respectToast">{{user.name}}'s R-score: {{respect}}</div>
 	
