--- a/client/index.html
+++ b/client/index.html
@@ -16,12 +16,12 @@
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
       <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
+      <link rel="stylesheet" href="bower_components/ng-img-crop/compile/minified/ng-img-crop.css" />
       <!-- endbower -->
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
       <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Abel">
       <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat">
-
 
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -37,11 +37,13 @@
       <link rel="stylesheet" href="app/fest/fest.css">
       <link rel="stylesheet" href="app/group/group.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/notFound/notFound.css">
       <link rel="stylesheet" href="app/profile/profile.css">
       <link rel="stylesheet" href="app/stage/stage.css">
       <link rel="stylesheet" href="app/uploadPortal/uploadPortal.css">
       <link rel="stylesheet" href="app/viewPage/viewPage.css">
       <link rel="stylesheet" href="app/welcomeUser/welcomeUser.css">
+      <link rel="stylesheet" href="components/cssAnimate/animate.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <link rel="stylesheet" href="components/navbar/navbar.css">
@@ -62,6 +64,11 @@
     
 
     <script>
+      $('*').contents().each(function() {
+          if(this.nodeType === Node.COMMENT_NODE) {
+              $(this).remove();
+          }
+      });
     /*$(document).ready(function(){
         
 
@@ -92,7 +99,7 @@
     </script>
   
   </head>
-  <body ng-app="myAppApp" class="nbr-notifications">
+  <body ng-app="myAppApp" >
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -153,6 +160,7 @@
       <script src="bower_components/angular-messages/angular-messages.js"></script>
       <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
       <script src="bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
+      <script src="bower_components/ng-img-crop/compile/minified/ng-img-crop.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -183,6 +191,8 @@
           <script src="app/group/withdate.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/notFound/notFound.controller.js"></script>
+          <script src="app/notFound/notFound.js"></script>
           <script src="app/profile/profile.controller.js"></script>
           <script src="app/profile/profile.js"></script>
           <script src="app/simple/simple.directive.js"></script>
