booking show modified

--- a/client/app/uploadPortal/uploadPortal.html
+++ b/client/app/uploadPortal/uploadPortal.html
@@ -10,7 +10,7 @@
 			<div class="centric sizeten colorg">*Note: It is not necessary that uploader gets to see the uploaded work on his/her profile, it only appears if her/she is credited for it.</div>
 			<hr style="border: 1px solid white;" />
 			<form name="form" ng-submit="postSubmit(form)" ng-model="form">
-    			<div class="tab-content">
+    			<div class="tab-content  thumbs_wrap col-md-12 " id="uploadAnimate">
         			<div class="tab-pane fade in active" id="upload_form2">
         				<ul class="nav nav-tabs" style="width:100%;padding:0px 100px">
 			        		<li class="active" ng-click="setType(1)"><a href="#article_upl" data-toggle="tab" >Writing</a></li>	        			
@@ -199,6 +199,7 @@
 			    	</div>
 	    		</div>
 	    	</form>
+	    	<div id="postCreated">Hi yo</div>
 		</div>
 	</div>
 </div>
