added few validation for upload

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -33,10 +33,10 @@
 
             
               <div class="form-group">
-                <input type="text" class="form-control " ng-model="user.email" autofocus placeholder="Smail" required name="email">
+                <input type="text" class="form-control " ng-model="user.email" autofocus placeholder="Smail"  name="email">
               </div>
               <div class="form-group">
-                <input type="password" class="form-control " ng-model="user.password" required placeholder="Password" name="password">
+                <input type="password" class="form-control " ng-model="user.password"  placeholder="Password" name="password">
               </div> 
 
             <div class="form-group has-error">
