--- a/client/app/welcomeUser/welcomeUser.html
+++ b/client/app/welcomeUser/welcomeUser.html
@@ -8,13 +8,31 @@
 			
 			<div class="centric sizeten colorg">Help us giving more information about you to make your experience better</div>
 			<hr style="border: 1px solid white;" />
-			<form name="form" ng-submit="editProfile(user)" ng-model="form" style="color:black">
+			<form name="form" ng-model="form" style="color:black">
         		<div class="col-md-6" style="padding:20px 50px 20px 100px">
 	        	
 		          	<div class="form-group">
 		          		<textarea class='autoExpand' rows='3' data-min-rows='3' placeholder='About' id="textarea" style="width:100%" ng-model="user.about" data-bind="hasfocus: true"></textarea>
 		          	</div>
 		          	<div class="form-group">
+		          		<button ngf-select ng-model="picFile" accept="image/*">
+				            Select Picture</button>
+				        <div ngf-drop ng-model="picFile" ngf-pattern="image/*"
+				             class="cropArea">
+				            <img-crop image="picFile  | ngfDataUrl"                 
+				            result-image="croppedDataUrl" ng-init="croppedDataUrl=''">
+				            </img-crop>
+				        </div>
+				        <div>
+				            <img ng-src="{{croppedDataUrl}}" />
+				        </div>
+				        <button ng-click="upload(croppedDataUrl)">Submit</button> 
+				            
+				        <span class="progress" ng-show="progress >= 0">
+				          <div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
+				        </span>
+				        <span ng-show="result">Upload Successful</span>
+				        <span class="err" ng-show="errorMsg">{{errorMsg}}</span>
 		          		<input type="text" ng-model="user.proPic" placeholder="Profile Pic" class="form-control">
 		          		<img src="{{user.proPic}}" width="30%" height="auto" id="dp" style="margin:10px 35%">
 		          	</div>
