--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -70,8 +70,8 @@
 
 		
 
-		<div class="tab-content col-md-12 bglg" style="padding:0px 50px !important">
-			<div class="col-md-12 bglg"> 
+		<div class="tab-content col-md-12" style="padding:0px 50px !important">
+			<div class="col-md-12 "> 
 			
 				<div class="col-md-12"  >
 					
