--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -3,27 +3,27 @@
 
 <div ng-include="'components/modal/modal.html'"></div>
 <script type="text/javascript">
-  $(document).ready(function() {
-    $('#top_logo').addClass('top_logo_sec2');
+//   $(document).ready(function() {
+//     $('#top_logo').addClass('top_logo_sec2');
 
-    $(window).scroll(function () {
-        //if you hard code, then use console
-        //.log to determine when you want the 
-        //nav bar to stick. 
-        var trueHeight=$(window).outerHeight();
-        var height;
+//     $(window).scroll(function () {
+//         //if you hard code, then use console
+//         //.log to determine when you want the 
+//         //nav bar to stick. 
+//         var trueHeight=$(window).outerHeight();
+//         var height;
         
-        	height=175;
-        console.log($(window).scrollTop())
-      if ($(window).scrollTop() > (height-65)) {
-        $('#tagline_box').addClass('tagline_box_fix');
-      }
-      if ($(window).scrollTop() < (height-64)) {
-        $('#tagline_box').removeClass('tagline_box_fix');
-      }
-    });
-  });
-</script>
+//         	height=175;
+//         console.log($(window).scrollTop())
+//       if ($(window).scrollTop() > (height-65)) {
+//         $('#tagline_box').addClass('tagline_box_fix');
+//       }
+//       if ($(window).scrollTop() < (height-64)) {
+//         $('#tagline_box').removeClass('tagline_box_fix');
+//       }
+//     });
+//   });
+// </script>
 <!--******************************************************************-->
 
 <div ng-controller="DashboardCtrl" id="for_blur" ng-show="isLoaded">
