added different types of submission to comp

--- a/client/app/welcomeUser/welcomeUser.html
+++ b/client/app/welcomeUser/welcomeUser.html
@@ -83,8 +83,8 @@
 					        <button type="button" class="w2g col-md-4" ng-click="skip(4)">Skip</button> 
 					        <button type="submit" class="w2g col-md-4">Done</button> 
 					            
-					        <span class="progress" ng-show="progress >= 0">
-					          <div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
+					        <span class="progress" ng-show="progress2 >= 0">
+					          <div style="width:{{progress2}}%" ng-bind="progress2 + '%'"></div>
 					        </span>
 					        <!-- <span ng-show="result">Upload Successful</span> -->
 					        <span class="err" ng-show="errorMsg">{{errorMsg}}</span>
