--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
       <link rel="stylesheet" href="app/viewPage/viewPage.css">
       <link rel="stylesheet" href="app/welcomeUser/welcomeUser.css">
       <link rel="stylesheet" href="components/cssAnimate/animate.css">
+      <link rel="stylesheet" href="components/cssAnimate/otherAnims.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <link rel="stylesheet" href="components/navbar/navbar.css">
