--- a/client/app/competition/competition.html
+++ b/client/app/competition/competition.html
@@ -268,13 +268,20 @@
         <br/><br/>
         <div class="col-md-12 box_shadow_dwn " style="padding:10px">
             <md-subheader class="md-no-sticky">Entries</md-subheader>
-        	<div class="col-md-4" ng-repeat="entry in event.entries | orderBy:myValueFunction"  style="padding:10px">
+        	<div class="col-md-4" ng-repeat="entry in event.entries | orderBy:myValueFunction"  style="padding:10px" ng-if="event.subType=='Image'">
              	<span>{{entry.user.name}}</span>
                 <img alt="{{entry.entry.entry }}" ng-src="{{entry.entry.entry }}" width="100%" height="auto" />                
                 <rating ng-model="entry.entry.rating" max="max" readonly="isReadonly" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" ng-click="ratePost(entry.entry.rating,entry.entry._id)">
                 <md-icon md-svg-icon="communication:messenger" ng-click="doSecondaryAction($event)" aria-label="Open Chat" class="md-secondary md-hue-3" ng-class="{'md-primary': person.newMessage}"></md-icon>
               
          	</div>
+          <div class="col-md-4" ng-repeat="entry in event.entries | orderBy:myValueFunction"  style="padding:10px" ng-if="event.subType=='Video'">
+              <span>{{entry.user.name}}</span>
+                <video controls ngf-src="entry.entry.entry" style="width:100%"></video>                
+                <rating ng-model="entry.entry.rating" max="max" readonly="isReadonly" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" ng-click="ratePost(entry.entry.rating,entry.entry._id)">
+                <md-icon md-svg-icon="communication:messenger" ng-click="doSecondaryAction($event)" aria-label="Open Chat" class="md-secondary md-hue-3" ng-class="{'md-primary': person.newMessage}"></md-icon>
+              
+          </div>
          	<button type="button" class="w2g" data-toggle="modal" data-target="#declareRes"> Declare Results</button>
         </div>
 
