--- a/client/app/uploadPortal/uploadPortal.html
+++ b/client/app/uploadPortal/uploadPortal.html
@@ -5,7 +5,7 @@
 		
 		<div  class="thumbs_wrap col-md-12 " style="background: rgb(240,240,240);">
 			
-			<h3 style="text-align: center;font-family: "times new roman";">Upload your MasterPiece</h3>
+			<h3 style="text-align: center;font-family: 'times new roman',arial;">Upload your MasterPiece</h3>
 			
 			<div class="centric sizeten colorg">*Note: It is not necessary that uploader gets to see the uploaded work on his/her profile, it only appears if her/she is credited for it.</div>
 			<hr style="border: 1px solid white;" />
