--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -1,6 +1,9 @@
+<div ng-include="'components/navbar/navbar.html'"></div>
+
+  <div id="hidden" ng-style="hidden"></div>
 
 
-<div class="container">
+<div class="container" ng-controller="SettingsCtrl">
   <div class="row">
     <div class="col-sm-12">
       <h1>Change Password</h1>
