modified  notifs and add folow to user

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -70,7 +70,7 @@
 
 		
 
-		<div class="tab-content col-md-12 bglgr" style="padding:0px 50px !important">
+		<div class="tab-content col-md-12 bglg" style="padding:0px 50px !important">
 			<div class="col-md-12 "> 
 			
 				<div class="col-md-12"  >
